--- a/css/style.css
+++ b/css/style.css
@@ -209,7 +209,7 @@ i {
 .destination {
   display: inline-block;
   font-size: .95em;
-  width: 55%;
+  width: 60%;
 	line-height: 1.2em;
 	float: left;
   padding: 8px 0 0 15px;
@@ -222,24 +222,24 @@ i {
   display: inline-block;
   color: #8C8C8C;
   font-size: 0.75em;
-  width: 55%;
-	line-height: 1.3;
+  width: 60%;
+	line-height: 1.2;
 	float: left;
   padding-left: 15px;
   padding-top: 3px;
   font-weight: 400;
-  letter-spacing: .02em;
+  letter-spacing: .01em;
 }
 
 .next-bus {
 	display: inline-block;
   position: relative;
   right: 5px;
-  font-size: 1.1em;
+  font-size: .95em;
   line-height: 1.2;
 	font-weight: 500;
   text-align: right;
-	width: 24%;
+	width: 20%;
   padding-top: 8px;
   color: #8C8C8C;
   letter-spacing: .02em;
@@ -252,7 +252,7 @@ i {
   color: #8C8C8C;
   font-size: 0.75em;
   line-height: 1.2;
-  width: 24%;
+  width: 20%;
   text-align: right;
   font-weight: 400;
   letter-spacing: .02em;
