--- a/css/style.css
+++ b/css/style.css
@@ -18,21 +18,21 @@ body {
 	position: fixed;
  	top: 0;
 	width: 100%;
-  height: 1.5em;
+  height: 1.75em;
 	background-color: rgba(0, 0, 0, .25);
   display: block;
   vertical-align: middle;
 }
 
 .status-time {
-  display: inline;
+  display: inline-block;
   vertical-align: top;
   float: left;
   margin-top: -3px;
 }
 
 .status-icons {
-  display: inline;
+  display: inline-block;
   vertical-align: top;
   float: right;
   margin-top: -3px;
