--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ body {
 	position: fixed;
  	top: 0;
 	width: 100%;
-  height: 1.75em;
+  height: 40px;
 	background-color: rgba(0, 0, 0, .25);
   display: block;
   vertical-align: middle;
@@ -28,14 +28,12 @@ body {
   display: inline-block;
   vertical-align: top;
   float: left;
-  margin-top: -3px;
 }
 
 .status-icons {
   display: inline-block;
   vertical-align: top;
   float: right;
-  margin-top: -3px;
 }
 
 nav {
